updated main look and added links to purchasing pages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
   <head>
@@ -16,31 +16,25 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ucdavis/Purchasing">Fork Me on GitHub</a>
-
           <h1 id="project_title">Purchasing</h1>
           <h2 id="project_tagline">UC Davis Pre-Purchasing Application</h2>
-
-          <section id="downloads">
-            <a class="zip_download_link" href="https://github.com/ucdavis/Purchasing/zipball/master">Download this project as a .zip file</a>
-            <a class="tar_download_link" href="https://github.com/ucdavis/Purchasing/tarball/master">Download this project as a tar.gz file</a>
-          </section>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Welcome to the UC Davis Pre-Purchasing Info Page.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>
+    Purchasing Quick Links:
+    <ul>
+        <li><a href="https://test.caes.ucdavis.edu/PrePurchasing">Purchasing Test Website</a></li>
+        <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website (Beta)</a></li>
+    </ul>
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>You must have a valid kerberos login and password to access this system. Please contact your department prepurchasing administrator for permissions.</p>
 
 <h3>Designer Templates</h3>
 
