finished with main text

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="https://test.caes.ucdavis.edu/PrePurchasing">Purchasing Test Website</a></li>
         <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website (Beta)</a></li>
         <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feeback Forum</a></li>
+        <li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
     </ul>
 </p>
 
@@ -59,7 +60,10 @@ the campus financial systems.</p>
         
 <h3>Authors and Contributors</h3>
 
-<p>@srkirkland</p>
+<p>This application would not be possible without the collaboration of many people across campus, 
+    including an excellent administrative committee and a diverse team of programmers from several different departments.  
+    We will expand on this section in the future, but for now please have a look at <a href="http://prepurchasing.ucdavis.edu/humans.txt">our "humans.txt" file</a> for a brief list of the humans responsible for creating the PrePurchasing web application.
+    </p>
      
         </section>
     </div>
