added link to sourcecode and pdf SRS

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ functions but there is no campus standard.
     including KFS, MyTravel, DPO/DRO/PR, and other campus services. This application also aids in the departmental approval process associated with approving order requests. 
     Seemless integration with DaFIS/KFS is expected in the near future.
 </p>
+<p>You can <a href="PurchasingSRS.pdf">view the original PrePurchasing SRS here</a></p>
         <p>
 Note: The PrePurchasing web application will only be expected to handle departmental review of orders and will not replace any approvals within the campus
 financial systems. Departmental approvals include supervisor and PI approval of an order. Account Managers provide review of
