added some beta1 new features content

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@ orders to ensure reliable and accurate data so that purchasers are able to provi
 This system shall in no way replace any approvals required in KFS and approvals in this tool does not necessarily mean an order can
 be purchased. This tool is designed to aid departments in organizing purchasing information to eliminate duplication of data entry in
 the campus financial systems.</p>
+
+<h3>Changelog</h3>
+<p>Eventually we'll track major changes here. For now, <a href="Beta1NewFeatures.html">see major changes since Beta1</a></p>
         
 <h3>Authors and Contributors</h3>
 
