--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -19,6 +19,11 @@
           <h1 id="project_title">PrePurchasing</h1>
           <h2 id="project_tagline">UC Davis Pre-Purchasing Application</h2>
         </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
     </div>
 
     <!-- MAIN CONTENT -->
