added in my blurb about shared or cluster admin workgroups

--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -58,7 +58,7 @@
             <p>TODO</p>
             
             <h3>*Administrative Workgroups</h3>
-            <p>TODO</p>
+            <p>Administrative workgroups allow simple management of multiple workgroups within an organization without the need for individually adding users into each workgroup.  These workgroups are purely for rights to approve/edit/view order requests and requests are accessed through an administrative screen.  Shared Or Cluster workgroups takes this idea one step forward, by integrating these permissions with a user’s everyday tasks.  Orders displayed from a Shared Or Cluster workgroup will appear in the user’s screens (ex. Landing page) as if they were assigned directly to the workgroup and will also receive emails when requests arrive.</p>
             
             <h3>Misc</h3>
             <p>There were many other significant changes made since the April 1st Beta. You can view <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/status/429176">our more than 40 completed tickets</a> for a comprehensive overview.  A few highlights:</p>
