--- a/screenshots.html
+++ b/screenshots.html
@@ -24,7 +24,7 @@
                 $(".slideshow a").fancybox({
                     'transitionIn': 'elastic',
                     'transitionOut': 'elastic',
-                    'cyclic': true,
+                    //'cyclic': true,
                     'titlePosition': "over", //inside, outside, over
                     'speedIn': 600,
                     'speedOut': 200,
@@ -61,8 +61,15 @@
             <h3>Sreenshots Of PrePurchasing In Action</h3>
 
             <div class="slideshow">
-                <a href="images/screenshots/landing.jpg" title="Initial landing page, showing at a glance your urgent and pending orders, open orders you have created, and other useful information for navigating quickly." rel="group1">KFS Details</a>
-                <a href="images/screenshots/lineitems.jpg" title="Initial landing page, showing at a glance your urgent and pending orders, open orders you have created, and other useful information for navigating quickly." rel="group1">KFS Details</a>
+                <ul>
+                    <li><a href="images/screenshots/landing.jpg" title="Initial landing page, showing at a glance your urgent and pending orders, open orders you have created, and other useful information for navigating quickly." rel="group1">Home Page Dashboard</a></li>
+                    <li><a href="images/screenshots/lineitems.jpg" title="You can enter any number of line items and the order totals are calculated as you type (including shipping/handling and tax)." rel="group1">Enter Line Items</a></li>
+                    <li><a href="images/screenshots/ordersplit.jpg" title="There are many options for account/routing orders, including splitting the order across multiple accounts. Other options include single account, route by Account Manager, and individual line item splits." rel="group1">Order Splits</a></li>
+                    <li><a href="images/screenshots/tour.jpg" title="Several self-guided help tours are available." rel="group1">Order Help Tour</a></li>
+                    <li><a href="images/screenshots/orderreview.jpg" title="Review, edit, duplicate and even print out (PDF) your orders from one simple page." rel="group1">Order Review</a></li>
+                    <li><a href="images/screenshots/search.jpg" title="Search through your orders instead of looking through old post-it notes for that elusive reference number" rel="group1">Searching</a></li>
+                    <li><a href="images/screenshots/history.jpg" title="View a customizable filtered list of your orders, and even export it to Excel" rel="group1">History</a></li>
+                </ul>
             </div>
         </section>
     </div>
