--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="screenshots.html">View Screenshots</a>
           <h1 id="project_title">PrePurchasing</h1>
           <h2 id="project_tagline">UC Davis Pre-Purchasing Application</h2>
         </header>
