added instructions to screenshot page

--- a/screenshots.html
+++ b/screenshots.html
@@ -58,8 +58,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
         <section id="main_content" class="inner">
-            <h3>Sreenshots Of PrePurchasing In Action</h3>
-
+            <h3>Sreenshots Of PrePurchasing In Action</h3><h5>View these images as a slideshow or one at a time</h5>
             <div class="slideshow">
                 <ul>
                     <li><a href="images/screenshots/landing.jpg" title="Initial landing page, showing at a glance your urgent and pending orders, open orders you have created, and other useful information for navigating quickly." rel="group1">Home Page Dashboard</a></li>
