added jason's comment for recieved packages

--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -59,7 +59,7 @@
             <img src="images/Changelog/whocanact.jpg" alt="workgruop user lookup"></img>
             
             <h3>*Received Packages</h3>
-            <p>asdfsdfsd</p>
+            <p>When you are receiving items, you may enter a quantity and or comments about that item. If you want to see everyone who has updated the item’s receiving values, you may click on the person icon next to the name.</p>
             <img src="images/Changelog/receivedpackages.jpg" alt="Received Packages"></img>
             
             <h3>*Administrative Workgroups</h3>
