changed humans.txt to production site

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ the campus financial systems.</p>
 
 <p>This application would not be possible without the collaboration of many people across campus, 
     including an excellent administrative committee and a diverse team of programmers from several different departments.  
-    We will expand on this section in the future, but for now please have a look at <a href="https://test.caes.ucdavis.edu/PrePurchasing/humans.txt">our "humans.txt" file</a> for a brief list of the humans responsible for creating the PrePurchasing web application.
+    We will expand on this section in the future, but for now please have a look at <a href="http://prepurchasing.ucdavis.edu/humans.txt">our "humans.txt" file</a> for a brief list of the humans responsible for creating the PrePurchasing web application.
     </p>
      
         </section>
