added info about filters on order history page

--- a/changelog.html
+++ b/changelog.html
@@ -37,12 +37,18 @@
 			
             <hr></hr><hr></hr>
 			
-			<h3>5/16/2012</h3>
+			<h3>Version 1. Beta</h3>
 			
 			<ul>
 				<li>DaFis integration</li>
 				<li>Addition of "Reviewer" role, granting read level permissions to all orders in workgroup.</li>
 				<li>Updated printout for order requests</li>
+				<li>Addition of filters to Order History page
+					<ul>
+						<li>Received/UnReceived</li>
+						<li>Last Action Date Range</li>
+					</ul>
+				</li>
 				<li>Various Bug Fixes/Performance Enchancements</li>
 			</ul>
             
