added receiving information

--- a/changelog.html
+++ b/changelog.html
@@ -44,11 +44,12 @@
 				<li>Addition of "Reviewer" role, granting read level permissions to all orders in workgroup.</li>
 				<li>Updated printout for order requests</li>
 				<li>Addition of filters to Order History page
-					<ul>
+					<ul style="margin: 0;">
 						<li>Received/UnReceived</li>
 						<li>Last Action Date Range</li>
 					</ul>
 				</li>
+				<li>Receiving Module, addition of more information</li>
 				<li>Various Bug Fixes/Performance Enchancements</li>
 			</ul>
             
