--- a/changelog.html
+++ b/changelog.html
@@ -49,7 +49,7 @@
 						<li>Last Action Date Range</li>
 					</ul>
 				</li>
-				<li>Receiving Module, addition of more information</li>
+				<li>Receiving Module, addition of comments, history of updates.</li>
 				<li>Various Bug Fixes/Performance Enchancements</li>
 			</ul>
             
