added new information to the beta1 features page. and new image

--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -50,6 +50,10 @@
             <p>If you view an order that has been submitted to the campus finanical system we will now automatically load relevant details about the current status of that order. What will you do with all that free time?</p>
             <img src="images/Changelog/kfsdetails.JPG" alt="kfs details"></img>
             
+			<h3>*Financial System Integration</h3>
+			<p>Putting order requests into the campus financial system (DaFIS) can be done with the click of a button.  Simply selecting a "KFS Document" and the type (DPO or PR), all of the relavent information from the request is automatically uploaded to DaFIS and a saved document will be waiting for you in your inbox.</p>
+			<img src="images/Changelog/kfsintegration.jpg" alt="kfs integration"></img>
+			
             <h3>*Order Details Simplification</h3>
             <p>It is now easier to navigate the options for providing account routing information. A simple horizontal set of buttons presents your options, with only the currently selected one visible at any time.</p>
             <img src="images/Changelog/orderdetailsaccount.JPG" alt="account select"></img>
@@ -65,6 +69,9 @@
             <h3>*Administrative Workgroups</h3>
             <p>Administrative workgroups allow simple management of multiple workgroups within an organization without the need for individually adding users into each workgroup.  These workgroups are purely for rights to approve/edit/view order requests and requests are accessed through an administrative screen.  Shared Or Cluster workgroups takes this idea one step forward, by integrating these permissions with a user’s everyday tasks.  Orders displayed from a Shared Or Cluster workgroup will appear in the user’s screens (ex. Landing page) as if they were assigned directly to the workgroup and will also receive emails when requests arrive.</p>
             
+			<h3>*Reviewer Role</h3>
+			<p>The Reviewer role has been added to the standard set of roles for workgroups.  Reviewer users in this role "read access" to all orders within the workgroup, allowing these users to view order requests, make comments, upload documents and receive items.</p>
+			
             <h3>Misc</h3>
             <p>There were many other significant changes made since the April 1st Beta. You can view <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/status/429176">our more than 40 completed tickets</a> for a comprehensive overview.  A few highlights:</p>
             <ul>
