updated the beta features page and printout

--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -72,6 +72,10 @@
 			<h3>*Reviewer Role</h3>
 			<p>The Reviewer role has been added to the standard set of roles for workgroups.  Reviewer users in this role "read access" to all orders within the workgroup, allowing these users to view order requests, make comments, upload documents and receive items.</p>
 			
+			<h3>*Updated Pdf Printout</h3>
+			<p>The printout option has been updated to include pertinent information (line items, accounting) and remove extraneous information (tracking and history).  The purpose of this printout is to provide the necessary pieces of information for purchasers to execute the order request.</p>
+			<a href="images/Changelog/printout.pdf">Click here for Sample</a>
+			
             <h3>Misc</h3>
             <p>There were many other significant changes made since the April 1st Beta. You can view <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/status/429176">our more than 40 completed tickets</a> for a comprehensive overview.  A few highlights:</p>
             <ul>
