--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -52,7 +52,7 @@
             
 			<h3>*Financial System Integration</h3>
 			<p>Putting order requests into the campus financial system (DaFIS) can be done with the click of a button.  Simply selecting a "KFS Document" and the type (DPO or PR), all of the relavent information from the request is automatically uploaded to DaFIS and a saved document will be waiting for you in your inbox.</p>
-			<img src="images/Changelog/kfsintegration.jpg" alt="kfs integration"></img>
+			<img src="images/Changelog/kfsintegration.JPG" alt="kfs integration"></img>
 			
             <h3>*Order Details Simplification</h3>
             <p>It is now easier to navigate the options for providing account routing information. A simple horizontal set of buttons presents your options, with only the currently selected one visible at any time.</p>
