added delete function to org charts

--- a/workgrouptool.html
+++ b/workgrouptool.html
@@ -63,7 +63,7 @@
 			<p style="margin-left: 10px; margin-bottom: -10px; font-weight: bold; text-decoration: underline;">Org/Workgroup</p>
 			<ul>
 				<li><div class="colorbox" style="background-color: black;"></div>Organization</li>
-				<li><div class="colorbox" style="background-color: brown"></div>Workgroup</li>
+				<li><div class="colorbox" style="background-color: #14337F"></div>Workgroup</li>
 			</ul>
 		
 			<p style="margin-left: 10px; margin-bottom: -10px; font-weight: bold; text-decoration: underline;">Roles</p>
@@ -79,26 +79,23 @@
 		<div class="ui-widget-content">
 	
 		<ul>
-			<li><span class="org" data-id="Org 1">Org 1</span>
+			<li><span class="org" data-id="Org 1">Org 1</span><div class="ui-icon ui-icon-closethick"></div>
 				<ul>
-					<li class="workgroup"><span class="workgroup admin" data-id="Workgroup 2">Workgroup 2</span></li>
-					<li><span class="org" data-id="Sub Org 1">Sub Org 1</span>
+					<li class="workgroup"><span class="workgroup admin" data-id="Workgroup 2">Workgroup 2</span><div class="ui-icon ui-icon-closethick"></div></li>
+					<li><span class="org" data-id="Sub Org 1">Sub Org 1</span><div class="ui-icon ui-icon-closethick"></div>
 						<ul>
-							<li class="workgroup"><span class="workgroup" data-id="Workgroup 1">Workgroup 1</span></li>
+							<li class="workgroup"><span class="workgroup" data-id="Workgroup 1">Workgroup 1</span><div class="ui-icon ui-icon-closethick"></div></li>
 						</ul>
 					</li>
-					<li><span class="org" data-id="Sub Org 2">Sub Org 2</span></li>
-					<li><span class="org" data-id="Sub Org 3">Sub Org 3</span></li>
-					<li><span class="org" data-id="Sub Org 4">Sub Org 4</span></li>
+					<li><span class="org" data-id="Sub Org 2">Sub Org 2</span><div class="ui-icon ui-icon-closethick"></div></li>
+					<li><span class="org" data-id="Sub Org 3">Sub Org 3</span><div class="ui-icon ui-icon-closethick"></div></li>
+					<li><span class="org" data-id="Sub Org 4">Sub Org 4</span><div class="ui-icon ui-icon-closethick"></div></li>
 				</ul>
 			</li>
 		</ul>
 		
-			
 		</div>
-		
 
-		
 		<input type="button" value="Update Chart" id="update-chart" class="button"/>
 	</div>
 	
@@ -180,30 +177,30 @@
 	<!-- Shared Services Center -->
 	<div id="tmpl-ssc">
 		<ul>
-			<li class='org'><span class="org" data-id="Shared Services Center">Shared Services Center</span>
+			<li class='org'><span class="org" data-id="Shared Services Center">Shared Services Center</span><div class="ui-icon ui-icon-closethick"></div>
 				<ul>
 					<li class="workgroup admin">
-						<span class="admin workgroup" data-id="SSC Purchasers">SSC Purchasers</span>
-						<span class="person purchaser" data-id="hermes">hermes</span>
-						<span class="person purchaser" data-id="farnsworth">farnsworth</span>
+						<span class="admin workgroup" data-id="SSC Purchasers">SSC Purchasers</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="hermes">hermes</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="farnsworth">farnsworth</span><div class="ui-icon ui-icon-closethick"></div>
 					</li>
 					<li class='org'>
-						<span class="org" data-id="Department">Department</span>
+						<span class="org" data-id="Department">Department</span><div class="ui-icon ui-icon-closethick"></div>
 						<ul>
-							<li class='org'><span class="org" data-id="Sub-Department 1">Sub-Department 1</span>
+							<li class='org'><span class="org" data-id="Sub-Department 1">Sub-Department 1</span><div class="ui-icon ui-icon-closethick"></div>
 								<ul>
 									<li class='workgroup'>
-										<span class="workgroup" data-id="workgroup 1">Workgroup 1</span>
-										<span class="person requester" data-id="pjfry">pjfry</span>
-										<span class="person approver" data-id="leela">leela</span>
-										<span class="person requester" data-id="bender">bender</span>
+										<span class="workgroup" data-id="workgroup 1">Workgroup 1</span><div class="ui-icon ui-icon-closethick"></div>
+										<span class="person requester" data-id="pjfry">pjfry</span><div class="ui-icon ui-icon-closethick"></div>
+										<span class="person approver" data-id="leela">leela</span><div class="ui-icon ui-icon-closethick"></div>
+										<span class="person requester" data-id="bender">bender</span><div class="ui-icon ui-icon-closethick"></div>
 									</li>
 								</ul>
-							<li class='org'><span class="org" data-id="Sub-Department 2">Sub-Department 2</span></li>
-							<li class='org'><span class="org" data-id="Sub-Department 3">Sub-Department 3</span></li>
+							<li class='org'><span class="org" data-id="Sub-Department 2">Sub-Department 2</span><div class="ui-icon ui-icon-closethick"></div></li>
+							<li class='org'><span class="org" data-id="Sub-Department 3">Sub-Department 3</span><div class="ui-icon ui-icon-closethick"></div></li>
 							<li class='workgroup'>
-								<span class='admin workgroup' data-id="Department Account Managers">Department Account Managers</span>
-								<span class="person accountmanager" data-id="zoidberg">zoidberg</span>
+								<span class='admin workgroup' data-id="Department Account Managers">Department Account Managers</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person accountmanager" data-id="zoidberg">zoidberg</span><div class="ui-icon ui-icon-closethick"></div>
 							</li>
 							</li>
 						</ul>
@@ -215,29 +212,29 @@
 	
 	<div id="tmpl-dept">
 		<ul>
-			<li class='org'><span class="org" data-id="Department">Department</span>
+			<li class='org'><span class="org" data-id="Department">Department</span><div class="ui-icon ui-icon-closethick"></div>
 				<ul>
 					<li class="workgroup admin">
-						<span class="workgroup admin" data-id="Administrative Wk">Administrative Wk</span>
-						<span class="person purchaser" data-id="hermes">hermes</span>
-						<span class="person purchaser" data-id="farnsworth">farnsworth</span>
-						<span class="person accountmanager" data-id="awong">awong</span>
+						<span class="workgroup admin" data-id="Administrative Wk">Administrative Wk</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="hermes">hermes</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="farnsworth">farnsworth</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person accountmanager" data-id="awong">awong</span><div class="ui-icon ui-icon-closethick"></div>
 					</li>
-					<li class='org'><span class="org" data-id="lab1">lab1</span>
+					<li class='org'><span class="org" data-id="lab1">lab1</span><div class="ui-icon ui-icon-closethick"></div>
 						<ul>
 							<li class="workgroup">
-								<span class="workgroup" data-id="lab wk">lab wk</span>
-								<span class="person requester" data-id="pjfry">pjfry</span>
-								<span class="person approver" data-id="leela">leela</span>
+								<span class="workgroup" data-id="lab wk">lab wk</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person requester" data-id="pjfry">pjfry</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person approver" data-id="leela">leela</span><div class="ui-icon ui-icon-closethick"></div>
 							</li>
 						</ul>
 					</li>
-					<li class='org'><span class="org" data-id="lab2">lab2</span>
+					<li class='org'><span class="org" data-id="lab2">lab2</span><div class="ui-icon ui-icon-closethick"></div>
 						<ul>
 							<li class="workgroup">
-								<span class="workgroup" data-id="lab2 wk">lab2 wk</span>
-								<span class="person requester" data-id="bender">bender</span>
-								<span class="person approver" data-id="leela">leela</span>
+								<span class="workgroup" data-id="lab2 wk">lab2 wk</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person requester" data-id="bender">bender</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person approver" data-id="leela">leela</span><div class="ui-icon ui-icon-closethick"></div>
 							</li>
 						</ul>
 					</li>
@@ -249,35 +246,35 @@
 	
 	<div id="tmpl-cluster">
 		<ul>
-			<li class='org'><span class="org" data-id="Cluster">Cluster</span>
+			<li class='org'><span class="org" data-id="Cluster">Cluster</span><div class="ui-icon ui-icon-closethick"></div>
 				<ul>
 					<li class="workgroup admin">
-						<span class="admin workgroup" data-id="Cluster Workgroup">Cluster Workgroup</span>
-						<span class="person purchaser" data-id="hermes">hermes</span>
-						<span class="person purchaser" data-id="farnsworth">farnsworth</span>
-						<span class="person accountmanager" data-id="awong">awong</span>
+						<span class="admin workgroup" data-id="Cluster Workgroup">Cluster Workgroup</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="hermes">hermes</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="farnsworth">farnsworth</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person accountmanager" data-id="awong">awong</span><div class="ui-icon ui-icon-closethick"></div>
 					</li>
 					<li class='org'>
-						<span class="org" data-id="Department">Department</span>
+						<span class="org" data-id="Department">Department</span><div class="ui-icon ui-icon-closethick"></div>
 						<ul>
-							<li class='org'><span class="org" data-id="Sub-Department 1">Sub-Department 1</span>
+							<li class='org'><span class="org" data-id="Sub-Department 1">Sub-Department 1</span><div class="ui-icon ui-icon-closethick"></div>
 								<ul>
 									<li class='workgroup'>
-										<span class="workgroup" data-id="workgroup 1">Workgroup 1</span>
-										<span class="person requester" data-id="farnsworth">pjfry</span>
-										<span class="person approver" data-id="leela">leela</span>
+										<span class="workgroup" data-id="workgroup 1">Workgroup 1</span><div class="ui-icon ui-icon-closethick"></div>
+										<span class="person requester" data-id="farnsworth">pjfry</span><div class="ui-icon ui-icon-closethick"></div>
+										<span class="person approver" data-id="leela">leela</span><div class="ui-icon ui-icon-closethick"></div>
 									</li>
 								</ul>
 							</li>
 						</ul>
 					</li>
 					<li class='org'>
-						<span class="org" data-id="Department2">Department2</span>
+						<span class="org" data-id="Department2">Department2</span><div class="ui-icon ui-icon-closethick"></div>
 						<ul>
 							<li class='workgroup'>
-								<span class="workgroup" data-id="workgroup 2">Workgroup 2</span>
-								<span class="person requester" data-id="bender">bender</span>
-								<span class="person requester" data-id="leela">leela</span>
+								<span class="workgroup" data-id="workgroup 2">Workgroup 2</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person requester" data-id="bender">bender</span><div class="ui-icon ui-icon-closethick"></div>
+								<span class="person requester" data-id="leela">leela</span><div class="ui-icon ui-icon-closethick"></div>
 							</li>
 						</ul>
 					</li>
@@ -288,19 +285,19 @@
 	
 	<div id="tmpl-1org">
 		<ul>
-			<li class="org"><span class="org" data-id="Department">Department</span>
+			<li class="org"><span class="org" data-id="Department">Department</span><div class="ui-icon ui-icon-closethick"></div>
 				<ul>
-					<li class="admin workgroup"><span class="admin workgroup" data-id="Administrative Wk">Administrative Wk</span>
-						<span class="person purchaser" data-id="hermes">hermes</span>
-						<span class="person purchaser" data-id="farnsworth">farnsworth</span>
-						<span class="person accountmanager" data-id="zoidberg">zoidberg</span>
+					<li class="admin workgroup"><span class="admin workgroup" data-id="Administrative Wk">Administrative Wk</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="hermes">hermes</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person purchaser" data-id="farnsworth">farnsworth</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person accountmanager" data-id="zoidberg">zoidberg</span><div class="ui-icon ui-icon-closethick"></div>
 					</li>
-					<li class="workgroup"><span class="workgroup" data-id="Workgroup 1">Workgroup 1</span>
-						<span class="person requester" data-id="pjfry">pjfry</span>
-						<span class="person approver" data-id="leela">leela</span>
+					<li class="workgroup"><span class="workgroup" data-id="Workgroup 1">Workgroup 1</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person requester" data-id="pjfry">pjfry</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person approver" data-id="leela">leela</span><div class="ui-icon ui-icon-closethick"></div>
 					</li>
-					<li class="workgroup"><span class="admin workgroup" data-id="Workgroup 2">Workgroup 2</span>
-						<span class="person requester" data-id="bender">bender</span>
+					<li class="workgroup"><span class="admin workgroup" data-id="Workgroup 2">Workgroup 2</span><div class="ui-icon ui-icon-closethick"></div>
+						<span class="person requester" data-id="bender">bender</span><div class="ui-icon ui-icon-closethick"></div>
 					</li>
 				</ul>
 			</li>
